<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="config_gral"
        android:title="Configuración general"
        app:iconSpaceReserved="false">

        <EditTextPreference
            app:iconSpaceReserved="false"
            android:key="@string/setting_ip"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="Introduzca dirección IP"
            android:title="@string/ip" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            android:key="@string/setting_puerto"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="Introduzca puerto"
            android:title="@string/puerto" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            android:key="@string/setting_auten"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="Introduzca clave de autenticación"
            android:title="@string/autenticacion" />

        <EditTextPreference
            app:iconSpaceReserved="false"
            android:key="@string/setting_serie_compra"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="Introduzca código del contador para albarán de compra"
            android:title="@string/serie_compra" />
    </PreferenceCategory>
</PreferenceScreen>