<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/verdeBebe"
    tools:context=".Interfaces.Entradas.ProductoFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/anyadirProducto_titulo"
            android:layout_alignParentStart="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12pt"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_marginBottom="10dp"
            android:elevation="6dp"
            android:background="@color/colorPrimary"
            style="@style/TextField"
            android:text="@string/anyadirProducto_lblTitulo"/>

        <LinearLayout
            android:id="@+id/anyadirProducto_linear_codProd"
            android:layout_below="@+id/anyadirProducto_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:layout_gravity="center_vertical"
                android:text="@string/anyadirProducto_lblCodProd"
                style="@style/TextField"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.75"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <com.google.android.material.textview.MaterialAutoCompleteTextView
                    android:id="@+id/anyadirProducto_codProd_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/anyadirProducto_et_descProd"
            android:layout_below="@id/anyadirProducto_linear_codProd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/anyadirProductos_descripcionProd_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:fontFamily="sans-serif"
                    android:hint="@string/anyadirProducto_lblDescripcionProd"/>
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/anyadirProducto_buscar_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/search"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/anyadirProducto_linear_udsPedido"
            android:layout_below="@id/anyadirProducto_et_descProd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:layout_gravity="center_vertical"
                android:text="@string/anyadirProducto_lblUdsPedido"
                style="@style/TextField"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.6"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/anyadirProducto_udsPedido_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:inputType="numberDecimal"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/anyadirProducto_linear_udsRecibidas"
            android:layout_below="@id/anyadirProducto_linear_udsPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:layout_gravity="center_vertical"
                android:text="@string/anyadirProducto_lblUdsRecibidas"
                style="@style/TextField"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.6"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/anyadirProducto_udsRecibidas_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:inputType="numberDecimal"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="60dp"
            android:layout_alignParentBottom="true">

            <ImageButton
                android:id="@+id/anyadirProducto_aceptar_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/negro"
                android:layout_marginRight="10dp"
                android:src="@drawable/check"/>

            <ImageButton
                android:id="@+id/anyadirProducto_cancelar_btn"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/negro"
                android:src="@drawable/cancel"/>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>